refactor: 재사용하지 않는 스트림 객체 toList()로 콜렉트